--- a/core/pom.xml
+++ b/core/pom.xml
@@ -28,10 +28,23 @@
   <groupId>org.mybatis.generator</groupId>
   <artifactId>mybatis-generator</artifactId>
   <name>MyBatis Generator</name>
-  <version>1.3.5</version>
+  <version>1.3.5-R</version>
   <packaging>pom</packaging>
 
   <inceptionYear>2006</inceptionYear>
+  
+  <distributionManagement>
+		<repository>
+			<id>releases</id>
+			<name>releases</name>
+			<url>http://192.168.248.15:18081/nexus/content/repositories/releases/</url>
+		</repository>
+		<snapshotRepository>
+			<id>snapshots</id>
+			<name>snapshots</name>
+			<url>http://192.168.248.15:18081/nexus/content/repositories/snapshots/</url>
+		</snapshotRepository>
+	</distributionManagement>
 
   <properties>
     <findbugs.onlyAnalyze>org.mybatis.generator.*</findbugs.onlyAnalyze>
@@ -46,7 +59,7 @@
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-plugin-plugin</artifactId>
       </plugin>
-      <plugin>
+      <!-- <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-javadoc-plugin</artifactId>
         <configuration>
@@ -57,7 +70,7 @@
             </tag>
           </tags>
         </configuration>
-      </plugin>
+      </plugin> -->
       <plugin>
         <groupId>org.jacoco</groupId>
         <artifactId>jacoco-maven-plugin</artifactId>
@@ -75,6 +88,11 @@
           <skip>true</skip>
         </configuration>
       </plugin>
+      <plugin>
+        <groupId>org.apache.felix</groupId>
+        <artifactId>maven-bundle-plugin</artifactId>
+        <version>3.0.0</version>
+       </plugin>
       <!-- need to allow snapshots so the maven plugin can be tested -->
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
@@ -96,7 +114,7 @@
           </execution>
         </executions>
       </plugin>
-      <plugin>
+      <!-- <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-javadoc-plugin</artifactId>
         <configuration>
@@ -107,7 +125,7 @@
             </tag>
           </tags>
         </configuration>
-      </plugin>
+      </plugin> -->
     </plugins>
 
     <resources>
@@ -126,6 +144,11 @@
 
     <pluginManagement>
       <plugins>
+      	<plugin>
+     		<groupId>org.apache.felix</groupId>
+       		<artifactId>maven-bundle-plugin</artifactId>
+        	<version>3.0.0</version>
+        </plugin>
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-jar-plugin</artifactId>
@@ -243,12 +266,12 @@
 
   <modules>
     <module>mybatis-generator-core</module>
-    <module>mybatis-generator-systests-domtests</module>
+    
     <module>mybatis-generator-maven-plugin</module>
-    <module>mybatis-generator-systests-common</module>
-    <module>mybatis-generator-systests-mybatis3</module>
-    <module>mybatis-generator-systests-ibatis2-java2</module>
-    <module>mybatis-generator-systests-ibatis2-java5</module>
+    
+    
+    
+    
   </modules>
 
   <profiles>
