--- a/core/mybatis-generator-maven-plugin/pom.xml
+++ b/core/mybatis-generator-maven-plugin/pom.xml
@@ -21,7 +21,7 @@
   <parent>
     <groupId>org.mybatis.generator</groupId>
     <artifactId>mybatis-generator</artifactId>
-    <version>1.3.5-R</version>
+    <version>1.3.5-R2</version>
   </parent>
 
   <artifactId>mybatis-generator-maven-plugin</artifactId>
